--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/9a0bddcbd7.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>GridBiz</title>
+</head>
+<body>
+    <div class="wrapper">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <section class="top-container">
+            <header class="showcase">
+                <h1>Your Web Presence</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit voluptate, modi placeat neque illum quasi.</p>
+                <a href="#" class="btn">Read More</a>
+            </header>
+            <div class="top-box top-box-a">
+                <h4>Membership</h4>
+                <p class="price">$199/mo</p>
+                <a href="#" class="btn">Buy Now</a>
+            </div>
+            <div class="top-box top-box-b">
+                <h4>Pro Membership</h4>
+                <p class="price">$299/mo</p>
+                <a href="#" class="btn">Buy Now</a>
+            </div>
+        </section>
+    </div>
+</body>
+</html>
