--- a/index.html
+++ b/index.html
@@ -35,6 +35,48 @@
                 <a href="#" class="btn">Buy Now</a>
             </div>
         </section>
+        <section class="boxes">
+            <div class="box">
+                <i class="fas fa-chart-pie fa-4x"></i>
+                <h3>Analytics</h3>    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-globe fa-4x"></i>
+                <h3>Marketing</h3>    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-ccog fa-4x"></i>
+                <h3>Development</h3>    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-users fa-4x"></i>
+                <h3>Support</h3>    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
+            </div>
+        </section>
+        <section class="info">
+            <img src="img/pic1.jpg" alt="">
+            <div>
+                <h2>Your Business On The Web</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos maiores vel beatae accusamus culpa repellendus a vero cumque nobis reiciendis!</p>
+            </div>
+        </section>
+        <section class="portfolio">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+        </section>
     </div>
 </body>
 </html>
