--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
         </section>
         <section class="portfolio">
             <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
-            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/201x200" alt="">
+            <img src="https://source.unsplash.com/random/202x200" alt="">
+            <img src="https://source.unsplash.com/random/203x200" alt="">
+            <img src="https://source.unsplash.com/random/204x200" alt="">
+            <img src="https://source.unsplash.com/random/205x200" alt="">
+            <img src="https://source.unsplash.com/random/206x200" alt="">
+            <img src="https://source.unsplash.com/random/207x200" alt="">
+            <img src="https://source.unsplash.com/random/208x200" alt="">
+            <img src="https://source.unsplash.com/random/209x200" alt="">
         </section>
+        <footer>
+            <p>GridBiz &copy; 2019</p>
+        </footer>
     </div>
 </body>
 </html>
