--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
             </div>
             <div class="box">
-                <i class="fas fa-ccog fa-4x"></i>
+                <i class="fas fa-cog fa-4x"></i>
                 <h3>Development</h3>    
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dicta.</p>
             </div>
